# rs_bill_reading

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: all_invoices_extracted.csv  sample_invoice_extracted.csv
notebooks/: 01_standard_extraction.ipynb
src/rs_bill_reading/: __init__.py  ai_extractor.py  standard_extractor.py
tests/: test_ai_extractor.py  test_standard_extractor.py
